# vmware06

./: points.txt
Day01/: Assignments.txt  O01Numbers01.py  O02Operators.py  O03ifConditions.py  O04ForLoop.py  O05WhileLoop.py  O06StringMan01.py  O07StringMan02.py  O08FormattingBasics01.py  O09FormattingBasics02.py  Prob01.py  Prob02.py  sample.py
Day02/: O01ListMan01.py  O02ListMan02.py  O03ListMan03.py  O04ListMan04.py  O05DictMan01.py  O06DictMan02.py  O07DictMan03.py  O08TupleMan01.py  O09TupleMan02.py  O10Sets.py  O11Consume01.py  O12Consume02.py  O13Consume03.py  O14Consume04.py
Day02/mypackage/: mymodule.py
Day03/: O01Consume05.py  O02unctions01.py  O03Lambdas.py  O04ListComp.py  O05DictComp.py  O06Scope01.py  O07Scope02.py  O08Scope03.py  O09Closure01.py  O10Closures02.py  O11Closure03.py  O12Closure04.py  O13HOF01.py  O14HOF02.py  O15Consume06.py  O16Oops01.py  O17Oops02.py  O18Oops03.py  O19Oops04.py  O20Oops05.py  O21Oops06.py  O22Oops07.py  arithmetic.py
Day03/Package Example/: setup.cfg
Day03/Package Example/src/vmware_package.egg-info/: PKG-INFO  SOURCES.txt
Day03/package_example/: setup.cfg
Day03/package_example/src/zansar_package/: zensar.py
Day03/package_example/src/zensar_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
